[package]
name = "cargo-examples"
version = "0.5.0"
authors = ["Richard Hozák"]
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/zxey/cargo-examples"
description = "Run all examples for any locally cloned crate"
categories = [
    "command-line-utilities",
    "development-tools::cargo-plugins",
]
keywords = [
    "cargo",
    "cargo-subcommand",
    "cli",
    "examples",
    "crates",
]

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5", features = ["derive"] }
tap = "1.0.1"
xshell = "0.2.7"
cargo_toml = "0.22.1"
